Concordance selection activated. Changed height and width of Concordance Navigator Window.

--- a/packages/eoTheme/sass/var/window/Window.scss
+++ b/packages/eoTheme/sass/var/window/Window.scss
@@ -154,7 +154,7 @@ $button-default-color: #000000;
 	}
 
 	.x-window-body > span > div:first-child > div:first-child {
-		display: none;		
+// 		display: none;		
 	}
 	
 	.x-btn-default-small {
