--- a/resources/css/EdiromOnlineRWA.css
+++ b/resources/css/EdiromOnlineRWA.css
@@ -56,6 +56,7 @@ p {
 }
 
 .annotation.Notentext .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "\E1D5";
     position: relative;
@@ -64,6 +65,7 @@ p {
 }
 
 .annotation.HalsungBalkung .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "\E1F3";
     position: relative;
@@ -72,52 +74,58 @@ p {
 }
 
 .annotation.TaktartMetrum .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "\E099";
     position: relative;
-    top: -15px;
-    left: 0.21em;
+    top: -13px;
+    left: 0.18em;
     font-size: 25px;
 }
 
 .annotation.Pausensetzung .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "\E4E5";
     position: relative;
-    top: -1px;
+    top: 0px;
     left: 0.45em;
     font-size: 17px;
 }
 
 .annotation.Tondauer .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "\E1D2";
     position: relative;
-    top: -2px;
+    top: 0px;
     left: 0.28em;
     font-size: 20px;
 }
 
 .annotation.Vortragsanweisung .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "rit.";
     font-style: italic;
     position: relative;
-    top: 1px;
-    left: 0.23em;
+    top: 2px;
+    left: 0.3em;
     font-size: 10px;
 }
 
 .annotation.Artikulation .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "\E4B2";
     position: relative;
-    top: -1px;
+    top: 0px;
     left: 0.23em;
     font-size: 25px;
 }
 
 .annotation.Dynamik .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "\E520";
     position: relative;
@@ -127,6 +135,7 @@ p {
 }
 
 .annotation.Pedalsetzung .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "\E650";
     position: relative;
@@ -136,6 +145,7 @@ p {
 }
 
 .annotation.Phrasierungsboegen .annotIcon:before {
+    line-height: 1;
 /*    font-family: bravura;*/
     content: "---";
     position: relative;
@@ -145,32 +155,36 @@ p {
 }
 
 .annotation.Bogensetzung .annotIcon:before {
+    line-height: 1;
     font-family: bravura;
     content: "\E4BA";
     position: relative;
-    top: -10px;
+    top: -7px;
     left: 0.08em;
     font-size: 40px;
 }
 
 .annotation.Beschreibung .annotIcon:before {
+    line-height: 1;
     font-family: FontAwesome;
     content: "\f0e5";
     position: relative;
     left: 0.2em;
     font-size: 13px;
+    top: -1px;
 }
 
 .annotation.Hinzufügung .annotIcon:before {
-/*    font-family: bravura;*/
+    line-height: 1;
     content: "+";
     position: relative;
-    top: 2px;
-    left: 0.5em;
-    font-size: 15px;
+    top: 1px;
+    left: 0.24em;
+    font-size: 19px;
 }
 
 .annotation.RasurTektur .annotIcon:before {
+    line-height: 1;
     font-family: FontAwesome;
     content: "\f12d";
     position: relative;
@@ -180,20 +194,22 @@ p {
 }
 
 .annotation.Streichung  .annotIcon:before {
+    line-height: 1;
     /*font-family: bravura;*/
     content: "xxx";
     position: relative;
-    top: 2px;
+    top: 4px;
     left: 0.25em;
     font-size: 9px;
 }
 
 .annotation.Liedtext .annotIcon:before {
+    line-height: 1;
     /*font-family: bravura;
     content: "\E595";*/
     content: "text";
     position: relative;
-    top: 3px;
+    top: 4px;
     left: 0.15em;
     font-size: 9px;
 }
