--- a/resources/css/EdiromOnlineRWA.css
+++ b/resources/css/EdiromOnlineRWA.css
@@ -44,7 +44,9 @@ p {
     color: DimGray;
 }
 
-
+.annotTip h1 {
+    font-size: 15px;
+}
 .ediromWindow .annotation.rwaAnnotPrio1 .annotIcon {
     background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(255, 48, 25, 0.85) 0px, rgba(207, 4, 4, 0.85) 100%) repeat scroll 0 0;
 }
@@ -416,13 +418,15 @@ span#workSwitch-btnInnerEl:before {
 }
 
 .searchWindow .hit {
-    color: #1354B5;
-    font-weight: bold;
-    display: inline-block;
-    padding: 0 3px;
-    border-radius: 3px;
-    background: -moz-linear-gradient(top, #e5e5e5,#cccccc);
     cursor: pointer;
+    color: rgb(146, 64, 92)!important;
+	font-weight: bold!important;
+	background-color: rgb(215, 185, 180)!important;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left:4px;
+	padding-right:4px;
+	border-radius: 4px;
 }
 
 span.searchResult {
