Correction for CSS parsing error while building.

--- a/packages/eoTheme/sass/var/button/Button.scss
+++ b/packages/eoTheme/sass/var/button/Button.scss
@@ -229,7 +229,7 @@ $edirom-taskbarWindowButton-background-color: #cccccc;
 
 /*
 #workSwitch {
-	//display: ;
+	display: ;
 	margin-left: auto;
 	margin-right: auto;
 }
