Fixed scroll in edirom's search window.

--- a/resources/css/EdiromOnlineRWA.css
+++ b/resources/css/EdiromOnlineRWA.css
@@ -1,7 +1,7 @@
-.ediromWindow .x-panel-body {
+/*.ediromWindow .x-panel-body {
     overflow: hidden !important;
 }
-
+*/
 
 .sub {
     font-size: 60%;
