Deletet volume titel because of length.

--- a/packages/eoTheme/sass/var/button/Button.scss
+++ b/packages/eoTheme/sass/var/button/Button.scss
@@ -223,7 +223,7 @@ $edirom-taskbarWindowButton-background-color: #cccccc;
 	font-size: 13px;
 	top: 16px;
 	left: 0;
-	content:'Band II/8 – Chöre a cappella I';
+	content:'Band II/8';
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
 }
 
