Edition-URI, languages, and OpenSeaDragon
Edition URI is used wherever possible
Language settings are used wherever possible
CookieController for keeping language settings
OpenSeaDragon integrated

--- a/packages/eoTheme/sass/var/button/Button.scss
+++ b/packages/eoTheme/sass/var/button/Button.scss
@@ -88,6 +88,21 @@ $edirom-taskbarWindowButton-background-color: #cccccc;
 	}
 }
 
+.taskSquareButton.lang {
+	background-image: url('pix/lang.png');
+	background-position: 0 0;
+	
+	&:hover {
+		background-position: 0 -24px;
+	}
+	
+	.x-btn-inner {
+	    font-size: 10px;
+	    color: #666;
+	    padding: 4px 3px;
+	}
+}
+
 .taskSquareButton.search {
 	background-image: url('pix/search.png');
 	background-position: 0 0;
