Show annot title and no red rectangle for annots

--- a/resources/css/todo.css
+++ b/resources/css/todo.css
@@ -79,8 +79,8 @@ span.smufl {
 }
 
 .ediromWindow .annotation {
-    border: 1px solid red;
-    background-color: rgba(255, 0, 0, 0.3);
+    /* border: 1px solid red;
+    background-color: rgba(255, 0, 0, 0.3); */
     z-index: 10;
 }
 
