--- a/resources/css/EdiromOnlineRWA.css
+++ b/resources/css/EdiromOnlineRWA.css
@@ -1,3 +1,8 @@
+/* possible workaround for explosiv edirom windows in rwa online. Does not work in Safari!!! but everywhere else.*/
+body {
+    overflow: clip !important;
+}
+
 /* prevents scroll bars in sourceView windows on Windows */
 .ediromWindow .x-panel-body {
     overflow: hidden !important;
