--- a/resources/css/EdiromOnlineRWA.css
+++ b/resources/css/EdiromOnlineRWA.css
@@ -43,7 +43,7 @@ span.title {
 
 @font-face{
     font-family: bravura;
-    src: url('../fonts/bravura/woff/BravuraText.woff');
+    src: url('../fonts/bravura-1.380/woff/BravuraText.woff');
 }
 
 span.musicalSymbol {
