temp. do not show open/close all in critical remarks

--- a/resources/css/EdiromOnlineRWA.css
+++ b/resources/css/EdiromOnlineRWA.css
@@ -540,3 +540,11 @@ div.annotation.combinedHighlight div.annotIcon {
     margin: 5px 0 15px 5px;
     cursor: pointer;
 }
+
+.openAll {
+    display: none;
+}
+
+.closeAll {
+    display: none;
+}
