add ViFE small logo

--- a/packages/eoTheme/sass/var/button/Button.scss
+++ b/packages/eoTheme/sass/var/button/Button.scss
@@ -208,7 +208,7 @@ $edirom-taskbarWindowButton-background-color: #cccccc;
 
 
 #homeBtn {
-	background-image: url('pix/rwa.png');
+	background-image: url('pix/ViFE-logo-small-144x144-trans.png');
 	background-repeat: no-repeat;
 	width: 41px;
 	height: 41px;
@@ -244,7 +244,7 @@ $edirom-taskbarWindowButton-background-color: #cccccc;
 
 /*
 #workSwitch {
-	
+
 }
 */
 
