--- a/packages/eoTheme/sass/var/button/Button.scss
+++ b/packages/eoTheme/sass/var/button/Button.scss
@@ -112,6 +112,11 @@ $edirom-taskbarWindowButton-background-color: #cccccc;
 	}
 }
 
+.x-btn-default-toolbar-small.x-pressed {
+    background-color: #A3A3A3 !important;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4) inset;
+}
+
 .toolButton {
 	width: 24px;
 	cursor: pointer;
