--- a/packages/eoTheme/sass/etc/facsimile.scss
+++ b/packages/eoTheme/sass/etc/facsimile.scss
@@ -9,7 +9,7 @@
 	}	
 	
 	.measureInner {
-/* 		background-color: rgba(100, 100, 100, 0.2); */
+ 		background-color: rgba(255, 255, 255, 0.5); 
 		border-radius: 15px;
 		padding: 3px 5px 0;
     	text-shadow: 0 1px 2px #000000, 0 0 5px #ffffff;
