--- a/packages/eoTheme/sass/etc/annotation.scss
+++ b/packages/eoTheme/sass/etc/annotation.scss
@@ -135,11 +135,13 @@ $content_baseFont_size: 14px;
 		}
 		
 		.previewItem.widthLimited img {
-			width: 100%;
+			max-height: 100%;
+			max-width: 100%;
 		}
 						
 		.previewItem.heightLimited img {
-			height: 100%;
+			max-height: 100%;
+			max-width: 100%;
 		}
 	}
 
