--- a/packages/eoTheme/sass/etc/annotation.scss
+++ b/packages/eoTheme/sass/etc/annotation.scss
@@ -322,7 +322,7 @@ $content_baseFont_size: 14px;
 	left: -10px;
 	width: 50px;
 	height: 80px;
-	background-image: url('../pix/annotPreviewBackward.png');
+	background-image: url('pix/annotPreviewBackward.png');
 	z-index: 20000;
 }
 
@@ -333,7 +333,7 @@ $content_baseFont_size: 14px;
 	right: -10px;
 	width: 50px;
 	height: 80px;
-	background-image: url('../pix/annotPreviewForward.png');
+	background-image: url('pix/annotPreviewForward.png');
 	z-index: 20000;
 }
 
