--- a/resources/css/todo.css
+++ b/resources/css/todo.css
@@ -202,6 +202,11 @@ span.italic {
     font-style: italic;
 }
 
+span.sup {
+    font-size: smaller;
+    vertical-align: super;
+}
+
 #navigator .navigatorCategory2 {
     padding: 0 0 2px 10px;
 }
