add superscript class to annotView content in sass

--- a/packages/eoTheme/sass/etc/annotation.scss
+++ b/packages/eoTheme/sass/etc/annotation.scss
@@ -80,6 +80,11 @@ $content_baseFont_size: 14px;
 		    font-size: 1.1em;
 		}
 		
+		.superscript{
+            vertical-align: top;
+			font-size: 0.7em;
+        }
+		
 	}
 	
 	.previewArea {
