improve: renderingView fitting to window
* revert some changes from #342
* move style definitions to eoTheme sass

--- a/packages/eoTheme/sass/etc/all.scss
+++ b/packages/eoTheme/sass/etc/all.scss
@@ -1,11 +1,11 @@
-@import 'webfonts.scss';	
+@import 'webfonts.scss';
 @import 'mixins.scss';
 
 /*Edirom*/
 @import 'facsimile.scss';
 @import 'xml.scss';
 @import 'toolbar.scss';
- 
+
 //@import 'textViewContent.scss';
 @import 'textView.scss';
 @import 'headerView.scss';
@@ -17,3 +17,6 @@
 
 /*Annotations*/
 @import 'annotation.scss';
+
+/*renderingView (Verovio)*/
+@import 'renderingViewContent.scss'
