Add cursor "pointer" to annot view text preview areas, fix for #89

--- a/packages/eoTheme/sass/etc/annotation.scss
+++ b/packages/eoTheme/sass/etc/annotation.scss
@@ -292,6 +292,7 @@ $content_baseFont_size: 14px;
     right: 10px;
     top: 10px;
     overflow: auto;
+	cursor: pointer;
 }
 
 .annotationViewContent .contentBox {
