--- a/packages/eoTheme/sass/var/button/Button.scss
+++ b/packages/eoTheme/sass/var/button/Button.scss
@@ -112,6 +112,15 @@ $edirom-taskbarWindowButton-background-color: #cccccc;
 	}
 }
 
+.taskLinkButton.about {
+	border: 1px solid #949393;
+	background-image: -webkit-linear-gradient(top, #adadad, #a79b9b 48%, #979797 52%, #c3c2c2);
+}
+
+.taskLinkButton.about:hover {
+	background-image: -webkit-linear-gradient(top, #cdcdcd, #c5c5c5 48%, #c3c3c3 52%, #d3d2d2);
+}
+
 .x-btn-default-toolbar-small.x-pressed {
     background-color: #A3A3A3 !important;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4) inset;
